--- a/biscuits/src/main/biscuits-ui/src/app/layout/header/header.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/layout/header/header.component.html
@@ -19,6 +19,11 @@
           Home
         </a>
       </li>
+      <li class="navbar-item" routerLink="missions">
+        <a class="nav-link">
+          Missions
+        </a>
+      </li>
       <li *ngIf="authority === 'user'" class="navbar-item" routerLink="user">
         <a class="nav-link">
           User
