[FEAT] remove mission or missions is working

--- a/biscuits/src/main/biscuits-ui/src/app/missions/mission-details/mission-details.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/missions/mission-details/mission-details.component.html
@@ -6,6 +6,6 @@
     {{mission.id}}
   </div>
 
-  <span class="button is-small btn-danger" (click)='deleteMission()'>Delete</span>
+  <span class="button is-small btn-danger" (click)="removeMission()">Delete</span>
 
 </div>
