--- a/biscuits/src/main/biscuits-ui/src/app/missions/missions-list/missions-list.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/missions/missions-list/missions-list.component.html
@@ -5,5 +5,5 @@
 </div>
 
 <div>
-  <button type="button" class="button btn-danger" (click)='deleteAllMissions()'>Delete All</button>
+  <button type="button" class="button btn-danger" (click)="removeAllMissions()">Delete All</button>
 </div>
