--- a/biscuits/src/main/biscuits-ui/src/app/authentication/sign-in/sign-in.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/authentication/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<h2 class="title is-2 has-text-centered has-text-info">Sign In</h2>
+<h2 class="action is-2 has-text-centered has-text-info">Sign In</h2>
 <form [formGroup]="signInForm" (ngSubmit)=onSubmit()>
   <div class="field">
     <label class="label has-text-info">Family Name</label>
