--- a/biscuits/src/main/biscuits-ui/src/app/authentication/sign-up/sign-up.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/authentication/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<h2 class="action is-2 has-text-centered has-text-info">Sign Up</h2>
+<h2 class="action has-text-centered has-text-info">Sign Up</h2>
 <form [formGroup]="signUpForm" (ngSubmit)=onSubmit()>
   <div class="field">
     <label class="label has-text-info">Family Name</label>
