--- a/biscuits/src/main/biscuits-ui/src/app/layout/header/header.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/layout/header/header.component.html
@@ -1,71 +1,82 @@
-<nav class="navbar is-primary is-fixed-top has-shadow" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io" routerLink="home">
-      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-    </a>
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
 
+  <div class="navbar-brand">
+    <a class="navbar-item" routerLink="home">
+      <span class="icon"><i class="fas fa-cookie fa-2x"></i></span>
+      <span class="biscuits has-text-dark">Biscuits</span>
+    </a>
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-       data-target="navbarBasicExample">
+       data-target="navbarLinks" (click)="toggleBurger()" [ngClass]="{'is-active': toggled}">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
   </div>
 
-  <div id="navbarBasicExample" class="navbar-menu">
+  <div class="navbar-menu" id="navbarLinks" [ngClass]="{'is-active': toggled}" *ngIf="toggled" (click)="toggleBurger()">
+
     <ul class="navbar-start">
-      <li class="navbar-item" routerLink="home">
-        <a class="nav-link">
-          Home
-        </a>
-      </li>
-      <li class="navbar-item" routerLink="missions">
-        <a class="nav-link">
+      <li *ngIf="!authority" class="navbar-item"  routerLinkActive="active-link"routerLink="missions">
+        <a class="nav-link is-bold">
           Missions
         </a>
       </li>
-      <li *ngIf="authority === 'user'" class="navbar-item" routerLink="user">
+      <li *ngIf="authority === 'user'" class="navbar-item" routerLinkActive="active-link" routerLink="user">
         <a class="nav-link">
           User
         </a>
-      <li *ngIf="authority === 'admin'" class="navbar-item" routerLink="admin">
+      <li *ngIf="authority === 'admin'" class="navbar-item" routerLinkActive="active-link" routerLink="admin">
         <a class="nav-link">
           Admin
         </a>
-
       </li>
     </ul>
 
-    <div class="navbar-end" routerLinkActive="active">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a *ngIf="!authority" class="button is-light" (click)="signUp($event)">
-            <strong>Sign Up</strong>
-          </a>
-          <a *ngIf="!authority" class="button is-light" (click)="signIn($event)">
-            <strong>Sign In</strong>
-          </a>
-          <a *ngIf="authority === 'user'" class="button is-light" (click)="signOut($event)">
-            <strong>Sign Out</strong>
-          </a>
-        </div>
+    <div class="navbar-end" routerLinkActive="active-link">
+      <div class="buttons">
+        <a *ngIf="!authority" class="button is-dark" (click)="signUp($event)">
+          <span><strong>Sign Up</strong></span>
+          <span class="icon is-small">
+              <i class="fas fa-user-plus"></i>
+             </span>
+        </a>
+        <a *ngIf="!authority" class="button is-light" (click)="signIn($event)">
+          <span><strong>Sign In</strong></span>
+          <span class="icon is-small">
+       <i class="fas fa-sign-in-alt"></i>
+    </span>
+        </a>
+        <a *ngIf="authority === 'user'" class="button is-light" (click)="signOut($event)">
+          <span><strong>Sign out</strong></span>
+          <span class="icon is-small">
+       <i class="fas fa-sign-out-alt"></i>
+    </span>
+        </a>
       </div>
     </div>
   </div>
 </nav>
 
 <div class="modal signIn" [ngClass]="{'is-active': signInIsActive}">
-  <div class="modal-background"></div>
-  <div class="modal-content">
-    <app-sign-in (messageEvent)="receiveMessageFromSignIn($event)"></app-sign-in>
-  </div>
-  <button class="modal-close is-large" aria-label="close" (click)="signIn($event)"></button>
+<div class="modal-background"></div>
+<div class="modal-card">
+  <header class="modal-card-head">
+    <p class="modal-card-title">Sign In</p>
+  </header>
+  <section class="modal-card-body">
+    <app-sign-in (fromSignInToSignUp)="receiveMessageFromSignIn($event)" (closeSignIn)="signIn($event)"></app-sign-in>
+  </section>
+  <footer class="modal-card-foot">
+    <button class="button is-success">Sign In</button>
+    <button class="button" (click)="signIn($event)">Cancel</button>
+  </footer>
+</div>
 </div>
 
 <div class="modal signUp" [ngClass]="{'is-active': signUpIsActive}">
-<div class="modal-background"></div>
-<div class="modal-content">
-  <app-sign-up (messageEvent)="receiveMessageFromSignUp($event)"></app-sign-up>
-</div>
-<button class="modal-close is-large" aria-label="close" (click)="signUp($event)"></button>
+  <div class="modal-background"></div>
+  <div class="modal-content">
+    <app-sign-up (fromSignUpToSignIn)="receiveMessageFromSignUp($event)" (closeSignUp)="signUp($event)"></app-sign-up>
+  </div>
+  <button class="modal-close is-large" aria-label="close" (click)="signUp($event)"></button>
 </div>
