--- a/biscuits/src/main/biscuits-ui/src/app/layout/home/home.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/layout/home/home.component.html
@@ -1,6 +1,18 @@
-<section class="hero is-info is-fullheight is-bold">
+<section class="hero is-fullheight-with-navbar is-link">
+  <!--  <div class="hero-head">
+      <div id="flow">
+        <span class="flow-1"></span>
+        <span class="flow-2"></span>
+        <span class="flow-3"></span>
+      </div>
+    </div>-->
   <div class="hero-body">
+
+
     <div class="container">
+      <p class="title">
+        Fun to-do list for clever kids!
+      </p>
 
       <div *ngIf="info.token; else loggedOut">
         <h5 class="text-primary">Your Information</h5>
@@ -13,9 +25,10 @@
       </div>
 
       <ng-template #loggedOut>
-        Please login.
-            </ng-template>
-
+        Join the game.
+      </ng-template>
     </div>
   </div>
 </section>
+
+
