--- a/biscuits/src/main/biscuits-ui/src/app/missions/missions-list/missions-list.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/missions/missions-list/missions-list.component.html
@@ -1,212 +1,12 @@
-<h1>Missions</h1>
-
-<div *ngFor="let mission of missions | async" style="width: 300px;">
-  <app-mission-details [mission]='mission'></app-mission-details>
-</div>
-
-<div>
-  <button type="button" class="button btn-danger" (click)="removeAllMissions()">Delete All</button>
-</div>
-<div class="content">
-<ul class="is-lower-alpha">
-  <li *ngFor="let mission of missions | async" class="checkbox">
-    <label>
-      <input type="checkbox">
-      {{mission.action}}
-    </label>
-  </li>
-</ul>
-</div>
-
-<div *ngFor="let mission of missions | async" class="checkbox" class="field">
-  <label>
-    <input type="checkbox">
-    {{mission.action}}
-  </label>
-</div>
-
-<div *ngFor="let mission of missions | async" class="checkbox" class="field" class="block" (click)="updateMission()">
-  <span class="tag is-success">
-    {{mission.action}}
-    <button class="delete is-small"></button>
-  </span>
-</div>
-
-<section class="container">
-  <div class="level-item">
-    <div class="columns is-multiline is-centered cards-container" id="sectioncontainer">
-      <div class="column is-narrow">
-        <article class="message is-black">
-          <div class="message-header">
-            <p>Season 1</p>
-            <button class="delete" aria-label="delete"></button>
-          </div>
-          <div class="message-body">
-            <div class="board-item">
-              <div class="board-item-content"><span>The Fort</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Fist Like a bullet</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>White Stork Spreads Wings</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Two Tigers Subdue Dragons</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Snake Creeps Down</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Hand of Five Poisons</span></div>
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="column is-narrow">
-        <article class="message is-primary">
-          <div class="message-header">
-            <p>Season 2</p>
-            <button class="delete" aria-label="delete"></button>
-          </div>
-          <div class="message-body">
-            <div class="board-item">
-              <div class="board-item-content"><span>Tiger Pushes Mountain</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Force of Eagle's Claw</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Red Sun, Silver Moon</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Palm of the Iron Fox</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Monkey Leaps Through Mist</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Leopard Stalks in Snow</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Black Heart, White Mountain</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Sting of the Scorpion's Tail</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Nightingale Sings No More</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Wolf's Breath, Dragon Fire</span></div>
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="column is-narrow">
-        <article class="message is-link">
-          <div class="message-header">
-            <p>Season 3</p>
-            <button class="delete" aria-label="delete"></button>
-          </div>
-          <div class="message-body">
-            <div class="board-item">
-              <div class="board-item-content"><span>Enter the Phoenix</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Moon Rises, Raven Seeks</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Leopard Snares Rabbit</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Blind Cannibal Assassins</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Carry Tiger to Mountain</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Black Wind Howls</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Dragonfly's Last Dance</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Leopard Catches Cloud</span></div>
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="column is-narrow">
-        <article class="message is-info">
-          <div class="message-header">
-            <p>Info</p>
-            <button class="delete" aria-label="delete"></button>
-          </div>
-          <div class="message-body">
-            <div class="board-item">
-              <div class="board-item-content"><span>Bronchy</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Aorta</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Alveolae</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>TALISMAN</span></div>
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="column is-narrow">
-        <article class="message is-success">
-          <div class="message-header">
-            <p>Success</p>
-            <button class="delete" aria-label="delete"></button>
-          </div>
-          <div class="message-body">
-            <div class="board-item">
-              <div class="board-item-content"><span>signature</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>weasel</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>solana</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>hydro</span></div>
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="column is-narrow">
-        <article class="message is-warning">
-          <div class="message-header">
-            <p>Warning</p>
-            <button class="delete" aria-label="delete"></button>
-          </div>
-          <div class="message-body">
-            <div class="board-item">
-              <input class="board-item-content"/>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Europa</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Tycho</span></div>
-            </div>
-            <div class="board-item">
-              <div class="board-item-content"><span>Io</span></div>
-            </div>
-          </div>
-        </article>
+<section class="hero is-link is-large">
+  <div class="hero-body">
+    <div class="container">
+      <div class="row columns is-multiline">
+        <div class="column is-one-third" *ngFor="let mission of missions | async">
+          <app-mission-details [mission]='mission'></app-mission-details>
+        </div>
       </div>
     </div>
   </div>
 </section>
-<div class="columns is-mobile is-centered">
-  <div class="column is-half is-narrow"></div>
-</div>
 
