--- a/biscuits/src/main/biscuits-ui/src/app/layout/header/header.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/layout/header/header.component.html
@@ -57,7 +57,7 @@
   </div>
 </nav>
 
-<div class="modal signIn" [ngClass]="{'is-active': signInIsActive}">
+<!--<div class="modal signIn" [ngClass]="{'is-active': signInIsActive}">
 <div class="modal-background"></div>
 <div class="modal-card">
   <header class="modal-card-head">
@@ -79,4 +79,4 @@
     <app-sign-up (fromSignUpToSignIn)="receiveMessageFromSignUp($event)" (closeSignUp)="signUp($event)"></app-sign-up>
   </div>
   <button class="modal-close is-large" aria-label="close" (click)="signUp($event)"></button>
-</div>
+</div>-->
