--- a/biscuits/src/main/biscuits-ui/src/app/missions/mission-details/mission-details.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/missions/mission-details/mission-details.component.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <footer class="card-footer">
-        <a href="#" class="card-footer-item"><i class="fas fa-times" (click)="removeMission()"></i></a>
+        <a href="#" class="card-footer-item"><i class="fas fa-times" (click)="deleteMission()"></i></a>
         <a href="#" class="card-footer-item"><i class="fas fa-edit" (click)="updateMission()"></i></a>
         <a href="#" class="card-footer-item"><i class="fas fa-check" (click)="isMissionDone()"></i></a>
       </footer>
