--- a/biscuits/src/main/biscuits-ui/src/app/missions/missions.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/missions/missions.component.html
@@ -78,7 +78,7 @@
 
       <div class="row columns is-multiline">
         <div class="column is-one-third is-two-thirds-mobile" *ngFor="let mission of missions">
-          <app-mission-details [kid]="selectedKid"></app-mission-details>
+          <app-mission-details [mission]="mission"></app-mission-details>
       </div>
     </div>
   </div>
