--- a/biscuits/src/main/biscuits-ui/src/app/missions/mission-details/mission-details.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/missions/mission-details/mission-details.component.html
@@ -17,7 +17,7 @@
       <footer class="card-footer">
         <a class="card-footer-item"><span class="icon" (click)="toggleEdit()"><fa-icon [icon]="faEdit"></fa-icon></span><span></span></a>
         <a class="card-footer-item"><span class="icon" ><fa-icon [icon]="faThumbsDown"></fa-icon></span><span></span></a>
-        <a class="card-footer-item"><span class="icon" (click)="completeMission()"><fa-icon [icon]="faThumbsUp"></fa-icon></span><span></span></a>
+        <a class="card-footer-item"><span class="icon" (click)="completeMission(mission)"><fa-icon [icon]="faThumbsUp"></fa-icon></span><span></span></a>
       </footer>
     </div>
   </div>
