--- a/biscuits/src/main/biscuits-ui/src/app/missions/missions.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/missions/missions.component.html
@@ -3,22 +3,8 @@
     <div class="container">
       <div class="column is-10 is-offset-2">
         <h3 class="title has-text-danger">
-          Missions
+          Missions of {{selectedKid.nickname}}
         </h3>
-      </div>
-
-      <div class="row">
-      <div class="column is-four-fifths is-three-fifths-mobile">
-          <div class="tabs is-right has-text-light">
-            <ul>
-              <li [ngClass]="{'is-active': isKidSelected}" *ngFor="let kid of kids" (click)="onSelect(kid)">
-                <a>
-                  <span>{{kid.nickname}}</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
       </div>
 
       <div class="row columns is-multiline">
@@ -37,9 +23,9 @@
                   <div class="control has-icons-left">
                     <input type="text" formControlName="action" class="input form-control" name="action" placeholder="Describe mission in few words"
                     [ngClass]="{ 'is-invalid': submitted && f.action.errors }"/>
-                    <span class="icon is-left has-text-primary">
+<!--                     <span class="icon is-left has-text-primary">
                       <fa-icon [icon]="faUserSecret"></fa-icon>
-                    </span>
+                    </span> -->
                   </div>
               </div>
               <div *ngIf="submitted && f.action.errors" class="invalid-feedback">
@@ -53,9 +39,9 @@
                   <div class="control has-icons-left">
                     <input type="text" formControlName="biscuits" class="input form-control" name="biscuits" placeholder="How many biscuits ?"
                     [ngClass]="{ 'is-invalid': submitted && f.biscuits.errors }"/>
-                    <span class="icon is-left has-text-primary">
+<!--                     <span class="icon is-left has-text-primary">
                       <fa-icon [icon]="faUserSecret"></fa-icon>
-                    </span>
+                    </span> -->
                   </div>
               </div>
               <div *ngIf="submitted && f.biscuits.errors" class="invalid-feedback">
@@ -78,7 +64,7 @@
 
       <div class="row columns is-multiline">
         <div class="column is-one-third is-two-thirds-mobile" *ngFor="let mission of missions">
-          <app-mission-details [mission]="mission"></app-mission-details>
+          <app-mission-details [mission]="mission" (isMissionUpdated)="reloadMissionsAfterUpdate($event)"></app-mission-details>
       </div>
     </div>
   </div>
